UAT_Backup_All_8Jan2024_0624/Backup-Source/objects/DoH_Summary__c.object
<CustomObject>
    <fields>
        <fullName>GCP_DOH_Trade_Partner_NDC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GCP DOH Trade Partner NDC</label>
        <referenceTo>GCP_DOH_Trade_Partner_NDC__c</referenceTo>
        <relationshipLabel>DoH_Summaries</relationshipLabel>
        <relationshipName>DoH_Summaries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NDC__c</fullName>
        <label>NDC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Package_Description__c</fullName>
        <label>Package Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trade_Partner_Name__c</fullName>
        <label>Trade Partner Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value_W1__c</fullName>
        <label>Value_W1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Value_W2__c</fullName>
        <label>Value_W2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Value_W3__c</fullName>
        <label>Value_W3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>DoH_Summaries</relationshipLabel>
        <relationshipName>DoH_Summaries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vision_Segment__c</fullName>
        <label>Segment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Sum_Average_Sales__c</fullName>
        <label>Sum Average Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_Unique_Identifier__c</fullName>
        <label>Unique Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>W1_DOH__c</fullName>
        <label>W1 DOH</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>W1_Day__c</fullName>
        <label>W1 Day</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>W1_QOH__c</fullName>
        <label>W1 QOH</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>W1_QTY_Sold__c</fullName>
        <label>W1 QTY Sold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>W2_DOH__c</fullName>
        <label>W2 DOH</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>W2_Day__c</fullName>
        <label>W2 Day</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>W2_QOH__c</fullName>
        <label>W2 QOH</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>W2_QTY_Sold__c</fullName>
        <label>W2 QTY Sold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>W3_DOH__c</fullName>
        <label>W3 DOH</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>W3_Day__c</fullName>
        <label>W3 Day</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>W3_QOH__c</fullName>
        <label>W3 QOH</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>W3_QTY_Sold__c</fullName>
        <label>W3 QTY Sold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WAC_Price__c</fullName>
        <label>WAC Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WAC_Value__c</fullName>
        <label>WAC Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>DoH_Summary</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Package_Description__c</columns>
        <columns>Trade_Partner_Name__c</columns>
        <columns>W1_QOH__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Trade_Partner_Name__c</field>
            <operation>equals</operation>
            <value>AMERISOURCEBERGEN CORPORATION</value>
        </filters>
        <filters>
            <field>Package_Description__c</field>
            <operation>equals</operation>
            <value>RAMELTON 8mg x 30</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <label>DoH_Summary Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DoH_Summaries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>